# Efficiency_toy_MC

./: .GeometricalEfficiency.cpp.swp  CMakeLists.txt  DepositionEnergy.cpp  DetectionEfficiency.cpp  DetectionEfficiencyInterpolator.h  EnergyvsEFF.root  GeometricalEfficiency.cpp  Klein_4.cpp  PhaseSpace.h  README.md  RegistrationEfficiency.cpp  RegistrationEfficiency.h  Strat.cpp  TotalEfficiency.cpp  inter.cpp  phasespace4.cpp  regEff.cpp  regEffProbs.txt  smeared.root  test.cpp  total.cpp
